fix: Hackily added padding to p element to fix layout & spacing issue.

--- a/src/scss/pages/_larrymg_me_index.scss
+++ b/src/scss/pages/_larrymg_me_index.scss
@@ -92,7 +92,8 @@ div.larrymg_me_index--intro {
 }
 
 div.larrymg_me_index--intro p {
-  margin: 10px 0px;
+  // Hacky layout & spacing fix!  Address when I refactor & consolidate CSS!
+  padding: 20px 0px;
 }
 
 /* #endregion *?
